chore(refactor): lay groundwork for server‑side data fetching
- Added  &  with Firestore helpers (not yet wired)
- Introduced  layout & page stubs for future server components
- Left existing GET API routes intact; app behaviour unchanged for now

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,11 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@firebase/*": ["./src/lib/firebase/*"],
+      "@actions/*":  ["./src/lib/actions/*"],
+      "@utils/*":    ["./src/lib/utils/*"],
+      "@types/*":    ["./src/types/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
