--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "test-admin": "tsx -r dotenv/config scripts/testAdmin.ts"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.17.0",
@@ -75,6 +76,8 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/lodash.debounce": "^4.0.9"
+    "@types/lodash.debounce": "^4.0.9",
+    "dotenv": "^16.5.0",
+    "tsx": "^4.19.4"
   }
 }
